--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-sxt-engine",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Collection of ESLint rules, following our styleguide",
   "keywords": [
     "eslint",
@@ -32,6 +32,7 @@
     "babel-plugin-module-resolver": "^3.1.0",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jasmine": "^2.9.2",
@@ -40,8 +41,8 @@
     "eslint-plugin-lodash": "^2.6.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
-    "eslint-plugin-security":"^1.4.0",
     "eslint-plugin-redux-saga": "^0.6.0",
+    "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-smells": "^1.0.1"
   },
   "devDependencies": {
