updated eslint prettier plugin

--- a/eslint-config-prettier.json
+++ b/eslint-config-prettier.json
@@ -2,6 +2,7 @@
   "extends":[
     "prettier",
     "prettier/react",
-    "prettier/standard"
+    "prettier/standard",
+    "plugin:prettier/recommended"
   ]
 }
