added sonar and smells for lodash added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-sxt-engine",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Collection of ESLint rules, following our styleguide",
   "keywords": [
     "eslint",
@@ -33,12 +33,14 @@
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-config-sonar": "0.0.6",
     "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jasmine": "^2.9.2",
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-lodash": "^2.6.1",
+    "eslint-plugin-lodash-smells": "^0.2.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
