fixed the sonar eslint plugin issues

--- a/eslint-config-security.json
+++ b/eslint-config-security.json
@@ -1,9 +1,9 @@
 {
   "plugins": [
-    "security",
-    "sonar"
+    "security"
   ],
   "extends": [
-    "plugin:security/recommended"
+    "plugin:security/recommended",
+    "sonar"
   ]
 }
